# streamlit-shadcn-ui

./: .gitignore  Home.py  LICENSE  MANIFEST.in  README.md  example.py  package.json  pyproject.toml  requirements.txt  setup.py
docs/: _Playground.py  introduction.md
docs/components/: accordion.md  accordtion.md  alert.md  alert_dialog.md  aspect_ratio.md  avatar.md  badges.md  bread_crumb.md  button.md  calendar.md  card.md  carousel.md  checkbox.md  collapsible.md  command.md  date_picker.md  dialog.md  dropdown_menu.md  experiment.md  hover_card.md  input.md  input_otp.md  link_button.md  metric_card.md  pagination.md  popover.md  progress.md  radio_group.md  resizable.md  scroll_area.md  select.md  separator.md  skeleton.md  slider.md  switch.md  table.md  tabs.md  textarea.md  toggle.md  toggle_group.md
e2e/: e2e_utils.py  test_template.py
local_components/: __init__.py  containers.py  headers.py
pages/: Accordion.py  Accordtion.py  Alert.py  AlertDialog.py  AspectRatio.py  Avatar.py  Badges.py  BreadCrumb.py  Button.py  Calendar.py  Card.py  Carousel.py  Checkbox.py  Collapsible.py  Command.py  DatePicker.py  Dialog.py  DropdownMenu.py  Experiment(Cool).py  HoverCard.py  Input.py  InputOTP.py  LinkButton.py  MetricCard.py  Pagination.py  Popover.py  Progress.py  RadioGroup.py  Resizable.py  ScrollArea.py  Select.py  Separator.py  Skeleton.py  Slider.py  Switch.py  Table.py  Tabs.py  TextArea.py  Toggle.py  ToggleGroup.py  (+1 more)
scripts/: build.sh  build_frontend.sh  dev.sh  frontend.sh
streamlit_shadcn_ui/: __init__.py
streamlit_shadcn_ui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
streamlit_shadcn_ui/components/: package.json
streamlit_shadcn_ui/py_components/: __init__.py  accordion.py  accordtion.py  alert.py  alert_dialog.py  aspect_ratio.py  avatar.py  badges.py  breadcrumb.py  button.py  calendar.py  card.py  carousel.py  checkbox.py  collapsible.py  command.py  date_picker.py  dialog.py  dropdown_menu.py  hover_card.py  input.py  input_otp.py  link_button.py  metric_card.py  pagination.py  popover.py  progress.py  radio_group.py  resizable.py  scroll_area.py  select.py  skeleton.py  slider.py  switch.py  table.py  tabs.py  textarea.py  toggle.py  toggle_group.py
streamlit_shadcn_ui/py_components/base/: __init__.py  context.py  element.py
(+6 files in other folders)
