[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-shadcn-ui"
version = "0.1.19"
readme = "README.md"
keywords = ["streamlit", "shadcn", "ui", "components"]
description = "Using shadcn components in Streamlit"
authors = [{ name = "Observed Observer", email = "ooer@kanaries.net" }]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit >= 0.63",
    "streamlit_extras >= 0.3.5",
]

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://github.com/ObservedObserver/streamlit-shadcn-ui"
repository = "https://github.com/ObservedObserver/streamlit-shadcn-ui"

[tool.setuptools]
packages = { find = {} }
include-package-data = true
